--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch",
-    "dev": "webpack serve --config webpack.config.js"
+    "dev": "webpack serve --config webpack.config.js",
+    "package": "npm run build && bestzip extension.zip manifest.json dist/* icons/* popup.html"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
@@ -20,6 +21,7 @@
     "@types/chrome": "^0.0.246",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "bestzip": "^2.2.1",
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
